Fase 7: terminada, se añaden dependencias al frontend
